kubernetes/base/gatewayserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayserver
  labels:
    app: gatewayserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayserver
  template:
    metadata:
      labels:
        app: gatewayserver
    spec:
      containers:
      - name: gatewayserver
        image: abderrahimself/gatewayserver:s11
        ports:
        - containerPort: 8050
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8050
          initialDelaySeconds: 120
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8050
          initialDelaySeconds: 90
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayserver
spec:
  selector:
    app: gatewayserver
  ports:
  - port: 8050
    targetPort: 8050
  type: ClusterIP
