kubernetes/base/gatewayserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: banking.local
    http:
      paths:
      - path: /accounts(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: gatewayserver
            port:
              number: 8050
      - path: /cards(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: gatewayserver
            port:
              number: 8050
      - path: /loans(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: gatewayserver
            port:
              number: 8050
      - path: /eureka(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: eurekaserver
            port:
              number: 8761
